--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -2,7 +2,7 @@ name: Build & Push Docker Image
 
 on:
   push:
-    branches: ["main", "master"]
+    branches: ["main"]
     tags: ["v*.*.*"]
   workflow_dispatch:
 
